[package]
name = "component"
version = "2.0.0"
edition = "2021"
description = "Component Reborn - A modern, batteries-included frontend build tool"
authors = ["Component Contributors"]
license = "MIT"
repository = "https://github.com/componentjs/component"
keywords = ["bundler", "frontend", "typescript", "build-tool", "hmr"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "Readme.md"

[[bin]]
name = "component"
path = "src/main.rs"

[lib]
name = "component_lib"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server & WebSocket for dev server + HMR
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# File system utilities
walkdir = "2.4"
globset = "0.4"
pathdiff = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
indicatif = "0.17"
console = "0.15"

# Utilities
semver = "1.0"
url = "2.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
async-trait = "0.1"

# CSS processing
lightningcss = "1.0.0-alpha.57"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster builds during development
opt-level = 0
debug = true
